DTO larda ayarlamalar yapıldı ilgili controllerlarda verimli çalışabilmeleri için uyumlu olarak düzenlendi. Admin artık tüm Author kontrollerini (crud işlemlerini) sorunsuz bir şekilde gerçektleştirebilir.

--- a/OnionProject.API/OnionProject.API.csproj
+++ b/OnionProject.API/OnionProject.API.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="jQuery" Version="3.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OnionProject.Application\OnionProject.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
